--- a/Bookshelf/package.json
+++ b/Bookshelf/package.json
@@ -11,10 +11,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^8.27.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
     "nodemon": "^2.0.20"
   },
   "dependencies": {
     "@hapi/hapi": "^20.2.2",
+    "lodash": "^4.17.21",
     "nanoid": "^3.3.4"
   }
 }
