--- a/Bookshelf/package.json
+++ b/Bookshelf/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "prod": "NODE_ENV=production node ./src/server.js",
+    "prod-unix": "NODE_ENV=production node ./src/server.js",
+    "prod-win": "set NODE_ENV=production && node ./src/server.js",
     "dev": "nodemon ./src/server.js",
     "lint": "eslint ./src/"
   },
