--- a/Bookshelf/package.json
+++ b/Bookshelf/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "prod-unix": "NODE_ENV=production node ./src/server.js",
-    "prod-win": "set NODE_ENV=production && node ./src/server.js",
-    "dev": "nodemon ./src/server.js",
+    "start-unix": "NODE_ENV=production node ./src/server.js",
+    "start-win": "set NODE_ENV=production && node ./src/server.js",
+    "start-dev": "nodemon ./src/server.js",
     "lint": "eslint ./src/"
   },
   "keywords": [],
@@ -21,5 +21,6 @@
     "@hapi/hapi": "^20.2.2",
     "lodash": "^4.17.21",
     "nanoid": "^3.3.4"
-  }
+  },
+  "description": ""
 }
